--- a/TccAliare/Forms/Frm_CadastroTitulo.resx
+++ b/TccAliare/Forms/Frm_CadastroTitulo.resx
@@ -129,4 +129,7 @@
         AABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="errorProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>11, 11</value>
+  </metadata>
 </root>
